fix: modify the dark mode media query
Leave the website in dark mode until the site is modified to support light mode.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-@media (prefers-color-scheme: dark) {
-    :root {
-        --text: #dedede;
-        --accent: #1688f0;
-        --light: #efefef;
-        --gray: #7e8890;
-        --bg-main: #000;
-        --border-accent: #dcd9d9;
-        --bg-user: #0a0a0f;
-    }
+:root {
+    --text: #dedede;
+    --accent: #1688f0;
+    --light: #efefef;
+    --gray: #7e8890;
+    --bg-main: #000;
+    --border-accent: #dcd9d9;
+    --bg-user: #0a0a0f;
 }
 
 body {
